[gd_scene load_steps=10 format=3 uid="uid://b6a8n65ge5i2y"]

[ext_resource type="Texture2D" uid="uid://bs536jrp5vrpy" path="res://assets/player/ash/AshTrainer.png" id="1_34sjl"]
[ext_resource type="Script" path="res://src/Ui/TrainerCard/trainer_card.gd" id="1_yeui6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvgkq"]
bg_color = Color(0.156863, 0.156863, 0.156863, 0.898039)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udqdb"]
bg_color = Color(0.333333, 0.333333, 0.333333, 0.898039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyc26"]
bg_color = Color(0.156863, 0.0156863, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_serdq"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.898039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cvha"]
bg_color = Color(0.167969, 0.167969, 0.167969, 1)
corner_radius_top_left = 64
corner_radius_top_right = 32

[sub_resource type="SystemFont" id="SystemFont_6grxr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_225vu"]
bg_color = Color(0.576471, 0.576471, 0.576471, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="TrainerCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yeui6")

[node name="MainBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -256.0
offset_right = 416.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvgkq")

[node name="GreyStripe" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -200.0
offset_right = 416.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_udqdb")

[node name="HBoxContainer" type="HBoxContainer" parent="GreyStripe"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -72.0
offset_right = -32.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Badge1" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge2" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge3" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge4" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge5" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge6" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge7" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="Badge8" type="Panel" parent="GreyStripe/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kyc26")

[node name="MainOverlay" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -112.0
offset_right = 416.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_serdq")

[node name="HBoxContainer" type="HBoxContainer" parent="MainOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MainOverlay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MainOverlay/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="One" type="TextureRect" parent="MainOverlay/HBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="Four" type="TextureRect" parent="MainOverlay/HBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MainOverlay/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Two" type="TextureRect" parent="MainOverlay/HBoxContainer/HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="Five" type="TextureRect" parent="MainOverlay/HBoxContainer/HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="VBoxContainer3" type="VBoxContainer" parent="MainOverlay/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Three" type="TextureRect" parent="MainOverlay/HBoxContainer/HBoxContainer/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="Six" type="TextureRect" parent="MainOverlay/HBoxContainer/HBoxContainer/VBoxContainer3"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="TrainerSprite" type="TextureRect" parent="MainOverlay/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_34sjl")
expand_mode = 3
stretch_mode = 3

[node name="TrainerStripe" type="Panel" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 224.0
offset_right = 1016.0
offset_bottom = 288.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7cvha")

[node name="Uid" type="Label" parent="TrainerStripe"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_6grxr")
theme_override_font_sizes/font_size = 32
text = "#h629538erfui"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 216.0
offset_right = 488.0
offset_bottom = 272.0
theme_override_styles/panel = SubResource("StyleBoxFlat_225vu")

[node name="Name" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource("SystemFont_6grxr")
theme_override_font_sizes/font_size = 32
text = "Ash"
horizontal_alignment = 1
vertical_alignment = 1
